--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.8.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "eslint": "^8",
