--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/dm-sans": "^5.1.0",
+    "@fontsource/poppins": "^5.1.0",
     "@material-tailwind/react": "^2.1.10",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.0",
