--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-multi-carousel": "^2.8.5",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
